internal/generate/testdata/errors/UnknownScalar.go
package errors

const _ = `# @octoqlgen
	query UnknownScalar { f }
`
